kubernetes/autism-traits/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autism-traits
  labels:
    app.kubernetes.io/name: autism-traits
    app.kubernetes.io/part-of: autism-traits
spec:
  selector:
    app.kubernetes.io/name: autism-traits
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
